# clowder

./: .gitignore  README.md  pyproject.toml
clowder/: clowder  environment.py  experiments_for_investigation.py  functions.py  investigation.py  investigations.py  main.py  status.py
clowder-cli/: clowder
