[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"
line_length = 120

[tool.poetry]
name = "clowder"
version = "0.0.1"
description = ""
authors = ["SIL International"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
google = "^3.0.0"
google-api-python-client = "^2.101.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
oauth2client = "^4.1.3"
gspread = "^5.11.2"
pydrive2 = "^1.17.0"
s3path = "^0.5.0"

[tool.poetry.dev-dependencies]


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pylint = "^2.17.6"
ipykernel = "^6.25.2"
ipython = "^8.15.0"
